Home LayoutPage Update

--- a/client/src/app/auth/pages/login-page/login-page.component.html
+++ b/client/src/app/auth/pages/login-page/login-page.component.html
@@ -45,14 +45,14 @@
 
         <div class="help-form">
           <label class="help-lbl" for="">No puedes ingresar?</label>
-          <a class="help-a" for="" routerLink="/auth/unblock-user">Desbloquear cuenta</a>
           <a class="password-a" for="" routerLink="/auth/recover-password">Olvide mi contraseña</a>
+          <a class="help-a" for="" routerLink="/auth/unblock-user">Desbloquear cuenta</a>
         </div>
 
       </div>
 
       <div class="button-container">
-        <button class="button">Ingresar</button>
+        <button class="button-login">Ingresar</button>
       </div>
 
 
