--- a/client/src/app/auth/pages/login-page/login-page.component.css
+++ b/client/src/app/auth/pages/login-page/login-page.component.css
@@ -107,6 +107,20 @@
   width: 100%;
 }
 
+.button-login{
+  background: var(--primary-color);
+  color: var(--white-color);
+  font-family: var(--font-family-poppins);
+  font-size: var(--font-size-md);
+  font-weight: var(--font-weight-bold);
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  height: 50px;
+  cursor: pointer;
+  margin: 0 10px 0 10px;
+}
+
 form .field input{
   height: 100%;
   width: 100%;
