--- a/client/src/app/auth/pages/recover-page/recover-page.component.html
+++ b/client/src/app/auth/pages/recover-page/recover-page.component.html
@@ -1,27 +1,28 @@
-<form class="form">
+<div class="container-main">
+
+  <form class="form">
 
 
-  <button class="button-return" routerLink="login">
-    <span class="material-symbols-outlined">
-      arrow_back_ios
-    </span>
-    <label for="">Regresar</label>
-  </button>
+    <div class="message-txt">
+      <label class="message" for="">Si no recuerdas tu contraseña porfavor ingresa tu correo electrónico, enviaremos ahí
+        una nueva contraseña para ti.</label>
+    </div>
 
-  <div class="message-txt">
-    <label class="message" for="">Si no recuerdas tu contraseña porfavor ingresa tu correo electrónico, enviaremos ahí
-      una nueva contraseña para ti.</label>
-  </div>
+    <div class="email-container">
+      <input type="text" class="email" placeholder="Ingrese su email">
+      <span class="material-symbols-outlined">
+        mail
+      </span>
+    </div>
 
-  <div class="email-container">
-    <input type="text" class="email" placeholder="Ingrese su email">
-    <span class="material-symbols-outlined">
-      mail
-    </span>
-  </div>
+    <div class="button-container">
+      <button class="button">Enviar</button>
+    </div>
 
-  <div class="button-container">
-    <button class="button">Enviar</button>
-  </div>
+    <div class="return">
+      <a href="" routerLink="login">Regresar</a>
+    </div>
 
-</form>
+  </form>
+
+</div>
