--- a/client/src/app/main/pages/about-page/about-page.component.html
+++ b/client/src/app/main/pages/about-page/about-page.component.html
@@ -1,1 +1,35 @@
-<p>about-page works!</p>
+<div class="body-controller">
+
+    <div class="banner-controller">
+        <img src="../../../../assets/icons/banner_DiabControl.svg" alt="banner-DiabControl">
+    </div>
+
+    <div class="info-controller">
+
+      <div class="firstSection">
+
+        <div class="contentOne">
+          <h1 class="tittle-info">Que es la Diabetes?</h1>
+          <p class="phrase" for="">
+            La diabetes tipo 2 es una enfermedad crónica que afecta la forma en que el cuerpo procesa la glucosa (azúcar) en la sangre. En personas con diabetes tipo 2, el cuerpo no produce suficiente insulina o no puede utilizarla eficazmente, lo que resulta en niveles elevados de azúcar en la sangre. A diferencia de la diabetes tipo 1, la diabetes tipo 2 suele desarrollarse en adultos, aunque también puede afectar a niños y adolescentes. Sin un control adecuado, la diabetes tipo 2 puede llevar a complicaciones graves como enfermedades cardiovasculares, daño nervioso, problemas de visión y enfermedad renal.
+          </p>
+        </div>
+
+        <div class="contentTwo">
+          <h1 class="tittle-info">Importancia del Control y Manejo de la Enfermedad</h1>
+          <p class="phrase" for="">
+            El control y manejo adecuados de la diabetes tipo 2 son fundamentales para prevenir complicaciones a largo plazo y mejorar la calidad de vida. Esto incluye mantener niveles de azúcar en la sangre dentro de un rango objetivo, seguir un plan de alimentación saludable, realizar ejercicio regularmente, tomar medicamentos según lo recetado y realizar pruebas regulares de glucosa en sangre.
+          </p>
+        </div>
+
+      </div>
+
+      <div class="scndSection">
+
+      </div>
+
+
+
+    </div>
+
+</div>
