--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -197,13 +197,29 @@
 }
 
 
+/* Estilos de textos*/
 
+.tittle-info{
+  font-family: var(--font-family-poppins);
+  font-size: var(--font-size-4xl);
+  font-weight: var(--font-weight-bold);
+}
 
-/* html, body {
-  height: 100%;
-  width: 100vw;
- }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+.phrase{
+  font-family: var(--font-family-poppins);
+  font-size: var(--font-size-lg);
+  font-weight: var(--font-weight-medium);
 
+  text-align: justify;
+}
 
+@media screen and (max-width: 768px){
+  .tittle-info{
+    font-size: var(--font-size-3xl);
+  }
+
+  .phrase{
+    font-size: var(--font-size-md);
+  }
+}
 
