--- a/client/src/app/main/layouts/main-layout/main-layout.component.html
+++ b/client/src/app/main/layouts/main-layout/main-layout.component.html
@@ -46,7 +46,7 @@
   <div class="float-controller">
     <button mat-icon-button [matMenuTriggerFor]="floatMenu" aria-label="Example icon-button with a menu">
       <span id="expand-arrow" class="material-symbols-outlined">
-        expand_less
+        add
       </span>
     </button>
   </div>
