--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,11 +1,11 @@
 /* PRIMENG IMPORTS TO USE IN STYLE CSS */
-@import "primeng/resources/themes/lara-light-blue/theme.css";
+/* @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 /* FONTS */
 /* Roboto Font */
@@ -222,4 +222,3 @@
     font-size: var(--font-size-md);
   }
 }
-
