--- a/client/src/app/main/layouts/main-layout/main-layout.component.css
+++ b/client/src/app/main/layouts/main-layout/main-layout.component.css
@@ -58,6 +58,8 @@ mat-icon{
   display: none;
 }
 
+
+
 /* Responsive CSS */
 @media screen and (max-width: 768px) {
 
@@ -83,11 +85,21 @@ mat-icon{
     width: 100%;
   }
 
-  #expand-arrow{
+  /* Boton flotante */
+  .mat-mdc-icon-button.mat-mdc-button-base {
+    display: grid;
+    place-content: center;
+    background: var(--light-blue-color);
+    color: var(--white-color);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+
+  #expand-arrow {
     font-size: 30px;
     color: var(--white-color);
-    -webkit-text-stroke-width: 1.5px;
-    -webkit-text-stroke-color: var(--black-color);
   }
 
 }
