--- a/client/src/app/main/pages/about-page/about-page.component.css
+++ b/client/src/app/main/pages/about-page/about-page.component.css
@@ -3,8 +3,6 @@
     height: 100vh;
     box-sizing: border-box;
     overflow-x: hidden;
-
-    background-color: lightgreen;
 }
 
 .banner-controller{
@@ -18,30 +16,52 @@
 
 .info-controller {
   width: 100%;
-  background-color: lightcoral;
 }
 
 .firstSection, .scndSection{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
   padding: 0 10px 0 10px;
 }
 
-.contentOne, .contentTwo{
-  width: 45%;
-}
 
 
 @media  screen and (max-width: 768px) {
 
-  .info-controller {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .firstSection, .scndSection{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+    padding: 0 10px 0 10px;
   }
-  .contentOne, .contentTwo{
+
+  .info-controller {
     width: 100%;
+    height: 100vh;
+  }
+
+  .banner-controller{
+    width: 100%;
+  }
+
+  .banner-controller img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .body-controller{
+    width: 100vw;
+    height: 100vh;
+    box-sizing: border-box;
+    overflow-x: hidden;
+  }
+
+  .firstSection, .scndSection{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+    padding: 0 10px 0 10px;
   }
 
 }
