--- a/client/src/app/main/pages/about-page/about-page.component.css
+++ b/client/src/app/main/pages/about-page/about-page.component.css
@@ -16,20 +16,20 @@
 
 .info-controller {
   width: 100%;
+  height: 100vh;
 }
 
-.firstSection, .scndSection{
+.grid-controller{
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-gap: 10px;
   padding: 0 10px 0 10px;
 }
 
 
-
 @media  screen and (max-width: 768px) {
 
-  .firstSection, .scndSection{
+  .grid-controller{
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 10px;
