--- a/client/src/app/auth/layout/auth-layout/auth-layout.component.html
+++ b/client/src/app/auth/layout/auth-layout/auth-layout.component.html
@@ -1,2 +1,20 @@
-<p>auth-layout works!</p>
-<router-outlet></router-outlet>
+
+<p-toolbar>
+  <div class="p-toolbar-group-start">
+      <button pButton icon="pi pi-plus" class="mr-2"></button>
+      <button pButton icon="pi pi-print" class="mr-2"></button>
+      <button pButton icon="pi pi-upload"></button>
+  </div>
+  <div class="p-toolbar-group-center">
+      <span class="p-input-icon-left">
+          <i class="pi pi-search"></i>
+          <input pInputText placeholder="Search" />
+      </span>
+  </div>
+</p-toolbar>
+
+<div class="main-controller">
+  <router-outlet></router-outlet>
+</div>
+
+
