--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -15,6 +15,11 @@
   font-family: var(--font-primary);
 }
 
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 
 /* Global Styles */
