--- a/client/src/app/auth/pages/login-page/login-page.component.html
+++ b/client/src/app/auth/pages/login-page/login-page.component.html
@@ -1,1 +1,51 @@
-<p>login-page works!</p>
+<div class="flex justify-content-center	align-items-center w-screen h-screen p-3">
+
+
+
+  <div class="card">
+
+    <div class="card-header h-auto">
+      <h3>Iniciar Sesion</h3>
+    </div>
+
+    <div class="h-auto">
+
+      <form action="" class="w-full">
+        <p-inputGroup class=" col-12">
+          <p-inputGroupAddon>
+            <i class="pi pi-user"></i>
+          </p-inputGroupAddon>
+          <input pInputText placeholder="Usuario" />
+        </p-inputGroup>
+
+        <p-inputGroup class="col-12">
+          <p-inputGroupAddon>
+            <i class="pi pi-lock"></i>
+          </p-inputGroupAddon>
+          <input type="password" pInputText placeholder="Contraseña" />
+        </p-inputGroup>
+
+        <div class="w-full">
+
+          <div class="col flex justify-content-between flex-wrap">
+            <label for="">Olvidaste tu contraseña?</label>
+            <a href="">recuperar contraseña</a>
+          </div>
+
+          <div class="col flex justify-content-between flex-wrap">
+            <label for="">Tu cuenta se encuentra bloqueada?</label>
+            <a href="">desbloquear cuenta</a>
+          </div>
+
+        </div>
+
+        <div class="w-full flex justify-content-center">
+          <p-button label="Ingresar"></p-button>
+        </div>
+
+      </form>
+    </div>
+  </div>
+
+</div>
+
