--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -13,12 +13,14 @@
 
 *{
   font-family: var(--font-primary);
+  font-weight: var(--font-weight-normal);
 }
 
 body{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 
