--- a/client/src/app/auth/layout/auth-layout/auth-layout.component.html
+++ b/client/src/app/auth/layout/auth-layout/auth-layout.component.html
@@ -1,6 +1,6 @@
 
-<p-toolbar id="toolbar">
-
+<p-toolbar>
+  <img class="img-logo" src="../../../../assets/icons/DiabControl_Banner_white_200x50.svg" alt="">
 </p-toolbar>
 
 <div class="main-controller">
