--- a/client/src/app/auth/pages/login-page/login-page.component.html
+++ b/client/src/app/auth/pages/login-page/login-page.component.html
@@ -1,15 +1,30 @@
-<div class="flex justify-content-center	align-items-center w-screen h-screen p-3">
+<div
+  class="flex md: justify-content-around	align-items-center w-screen h-screen flex-wrap sm: justify-content-center align-items-center">
 
+  <div id="title-controller" class="md:w-6">
+
+    <div class="title-container">
+      <label class="diab" for="">Diab</label>
+      <label class="control" for="">Control</label>
+    </div>
+
+    <div>
+      <p class="text-justify">
+        DiabControl es tu compañero en el camino hacia un control óptimo de la diabetes. Nuestra plataforma te ofrece
+        una manera fácil y segura de llevar un seguimiento con tu médico especialista. Con características intuitivas y
+        herramientas personalizadas, estamos aquí para ayudarte a tomar el control de tu salud de manera asincrónica, en
+        cualquier momento y desde cualquier lugar.
+      </p>
+    </div>
+
+  </div>
 
 
   <div class="card">
-
     <div class="card-header h-auto">
       <h3>Iniciar Sesion</h3>
     </div>
-
     <div class="h-auto">
-
       <form action="" class="w-full">
         <p-inputGroup class=" col-12">
           <p-inputGroupAddon>
@@ -29,12 +44,12 @@
 
           <div class="col flex justify-content-between flex-wrap">
             <label for="">Olvidaste tu contraseña?</label>
-            <a href="">recuperar contraseña</a>
+            <a routerLink="/auth/reset-password">recuperar contraseña</a>
           </div>
 
           <div class="col flex justify-content-between flex-wrap">
             <label for="">Tu cuenta se encuentra bloqueada?</label>
-            <a href="">desbloquear cuenta</a>
+            <a routerLink="/auth/unblock-account">desbloquear cuenta</a>
           </div>
 
         </div>
@@ -42,7 +57,6 @@
         <div class="w-full flex justify-content-center">
           <p-button label="Ingresar"></p-button>
         </div>
-
       </form>
     </div>
   </div>
