--- a/client/src/app/auth/pages/unblock-page/unblock-page.component.html
+++ b/client/src/app/auth/pages/unblock-page/unblock-page.component.html
@@ -1,1 +1,29 @@
-<p>unblock-page works!</p>
+<div class="flex justify-content-center	align-items-center w-screen h-screen p-3">
+  <div class="card">
+    <div class="h-auto">
+      <div class="mb-3 text-justify">
+        <label for="">
+          Si su cuenta se encuentra bloqueada porfavor ingrese el correo electrónico a la que este asignada, enviaremos ahí una notificación cuando ya este nuevamente activa.
+        </label>
+      </div>
+      <form action="" class="w-full">
+        <p-inputGroup class="mb-3">
+          <p-inputGroupAddon>
+            <i class="pi pi-envelope"></i>
+          </p-inputGroupAddon>
+          <input pInputText placeholder="Correo" />
+        </p-inputGroup>
+
+        <div class="w-full mb-3">
+          <div class="w-full flex justify-content-center">
+            <p-button label="Enviar"></p-button>
+          </div>
+        </div>
+        <div class="flex justify-content-center">
+          <a routerLink="/auth/login">Regresar</a>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
