--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -47,7 +47,7 @@ body{
   --light-blue-color: #1E3A8A;
   --light-yellow-color: #FFC107;
   --light-red-color: #FF5722;
-  --light-green-color: #4CAF50;
+  --light-green-color: #64ebb6;
   --light-purple-color: #9C27B0;
   --light-orange-color: #FF9800;
   --light-pink-color: #E91E63;
