--- a/client/src/app/home/layout/home-layout/home-layout.component.css
+++ b/client/src/app/home/layout/home-layout/home-layout.component.css
@@ -5,3 +5,48 @@
 #div{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
+
+#bottomMenu{
+  display: none;
+}
+
+@media screen and (max-width: 600px){
+
+  .body-controller{
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+
+  #bottomMenu{
+    display: block;
+    position: absolute;
+    left: 45%;
+    bottom: 3%;
+  }
+
+  #div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #div .container-menu{
+    display: none !important;
+  }
+
+  ::ng-deep .mat-bottom-sheet-container{
+    background-color: white !important;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+
+  ::ng-deep .p-button{
+    width: 100% !important;
+  }
+
+  ::ng-deep .p-menu{
+    width: 100% !important;
+  }
+
+}
