--- a/client/src/app/shared/pages/error404-page/error404-page.component.html
+++ b/client/src/app/shared/pages/error404-page/error404-page.component.html
@@ -1,1 +1,18 @@
-<p>error404-page works!</p>
+<div id="div-controller" class="flex hidden align-items-center justify-content-center flex-column h-screen">
+
+  <h1 class="mt-3 mb-3">Oops!</h1>
+
+  <h3>
+    Error 404 - Página no Encontrada
+  </h3>
+
+  <p>
+    La página que estas buscando puede haber sido removid, haya cambiado de nombre o esta temporalmente deshabilitada.
+  </p>
+
+  <div>
+    <p-button label="Regresar" icon="pi pi-arrow-left" routerLink="/auth/"></p-button>
+  </div>
+
+
+</div>
