--- a/client/src/app/home/layout/home-layout/home-layout.component.css
+++ b/client/src/app/home/layout/home-layout/home-layout.component.css
@@ -20,10 +20,10 @@
 
 
   #bottomMenu{
-    display: block;
+    display: flex;
     position: absolute;
     left: 45%;
-    bottom: 3%;
+    top: 100%;
   }
 
   #div{
