--- a/client/src/app/home/pages/welcome-page/welcome-page.component.html
+++ b/client/src/app/home/pages/welcome-page/welcome-page.component.html
@@ -1,1 +1,5 @@
-<p>welcome-page works!</p>
+<div class="flex align-items-center justify-content-center h-screen w-screen hidden">
+
+  <img src="../../../../assets/icons/Logo_DiabControlHome.svg" alt="">
+
+</div>
