--- a/client/src/app/home/pages/forms-page/forms-page.component.html
+++ b/client/src/app/home/pages/forms-page/forms-page.component.html
@@ -2,7 +2,7 @@
 
   <div class="flex align-items-center justify-content-between pl-3 pr-3">
     <h4>Mis Formularios</h4>
-    <p-button label="Agregar Formulario" icon="pi pi-plus" routerLink="home/forms/create-form"></p-button>
+    <p-button label="Agregar Formulario" icon="pi pi-plus" routerLink="/home/formularios/crear"></p-button>
   </div>
 
   <div class="card pl-3 pr-3">
@@ -31,3 +31,4 @@
   </div>
 
 </div>
+
