--- a/client/src/app/home/pages/patients-page/patients-page.component.html
+++ b/client/src/app/home/pages/patients-page/patients-page.component.html
@@ -35,8 +35,8 @@
                 <p-tag severity="danger" value="Inactivo"></p-tag>
               </td>
               <td class="flex flex-wrap gap-1 ">
-                <p-button icon="pi pi-eye" />
-                <p-button icon="pi pi-pencil" />
+                <p-button icon="pi pi-eye" [routerLink]="['/home/pacientes/', patients.int_id_user]" />
+                <p-button icon="pi pi-pencil" [routerLink]="['/home/pacientes/', patients.int_id_user]" />
                 <p-button icon="pi pi-clipboard" />
                 <p-button icon="pi pi-sync" />
               </td>
