--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -40,7 +40,7 @@ body{
   --denary-color: #FF5722;
   --white-color: #FFFFFF;
   --black-color: #000000;
-  --gray-color: #8a8a8a;
+  --gray-color: #6b7280;
   --light-gray-color: #D9D9D9;
   --lightes-gray-color: #E5E5E5;
   --dark-gray-color: #333333;
