Style Home Update

--- a/client/src/app/home/pages/create-patient-page/create-patient-page.component.html
+++ b/client/src/app/home/pages/create-patient-page/create-patient-page.component.html
@@ -1,1 +1,13 @@
-<p>create-patient-page works!</p>
+<div class="grid w-screen">
+
+  <div class="col-12">
+
+    <h3>Agregar Paciente | Usuario</h3>
+
+  </div>
+
+  <p-card class="col-12">
+
+  </p-card>
+
+</div>
