--- a/client/src/app/home/pages/patient-view-page/patient-view-page.component.html
+++ b/client/src/app/home/pages/patient-view-page/patient-view-page.component.html
@@ -20,7 +20,7 @@
 
 
 
-      <form #formRef="ngForm" class="col-12 flex flex-wrap align-items-center flex-column sm:flex-row">
+      <form class="col-12 flex flex-wrap align-items-center flex-column sm:flex-row">
 
         <div class="col-12 flex flex-column gap-2 sm:col-6">
           <label for="name">Nombre</label>
