--- a/client/src/app/home/pages/patients-page/patients-page.component.html
+++ b/client/src/app/home/pages/patients-page/patients-page.component.html
@@ -1,46 +1,51 @@
-<div class="px-3 flex align-items-center justify-content-between w-screen">
+<div class="w-screen h-full p-3">
 
-  <h3>Mis Pacientes</h3>
+  <div class="flex align-items-center justify-content-between">
+    <h4>Mis Pacientes</h4>
+    <p-button label="Registrar Paciente" icon="pi pi-plus" size="small"
+      routerLink="/home/pacientes/registrar"></p-button>
+  </div>
 
-  <p-button label="Registrar Paciente" icon="pi pi-plus" size="small" ></p-button>
-
-</div>
-
-<div class="card mx-3">
-  <p-table [value]="patients" [tableStyle]="{ 'min-width': '50rem' }">
+  <p-card class="">
+    <p-table [value]="patients" [tableStyle]="{ 'min-width': '50rem' }">
       <ng-template pTemplate="header">
-          <tr>
-              <th>Codigo</th>
-              <th>Nombre</th>
-              <th>Apellido</th>
-              <th>Usuario</th>
-              <th>Correo</th>
-              <th>Estado</th>
-              <th>Acciones</th>
-          </tr>
+        <tr>
+          <th>Codigo</th>
+          <th>Nombre</th>
+          <th>Apellido</th>
+          <th>Usuario</th>
+          <th>Correo</th>
+          <th>Estado</th>
+          <th>Acciones</th>
+        </tr>
       </ng-template>
       <ng-template pTemplate="body" let-patients>
-          <tr>
-              <td>{{ patients.id}}</td>
-              <td>{{ patients.str_name_user }}</td>
-              <td>{{ patients.str_lastname_user }}</td>
-              <td>{{ patients.str_username_user}}</td>
-              <td>{{ patients.str_email_user }}</td>
-              <!-- Creamos un ngIf donde si el users.bool_status_user es True muestre esta etiqueta td -->
-              <td *ngIf="patients.bool_status_user">
-                <p-tag severity="success" value="Activo"></p-tag>
-              </td>
-              <!-- Creamos un ngIf donde si el users.bool_status_user es False muestre esta etiqueta td -->
-              <td *ngIf="!patients.bool_status_user">
-                <p-tag severity="danger" value="Inactivo"></p-tag>
-              </td>
-              <td class="flex flex-wrap gap-1 ">
-                <p-button icon="pi pi-eye" size="small" [outlined]="true" [routerLink]="['/home/pacientes/', patients.id]" />
-                <p-button icon="pi pi-clipboard" size="small" [outlined]="true" />
-                <p-button icon="pi pi-sync" size="small" [outlined]="true" />
-              </td>
+        <tr>
+          <td>{{ patients.id}}</td>
+          <td>{{ patients.str_name_user }}</td>
+          <td>{{ patients.str_lastname_user }}</td>
+          <td>{{ patients.str_username_user}}</td>
+          <td>{{ patients.str_email_user }}</td>
+          <!-- Creamos un ngIf donde si el users.bool_status_user es True muestre esta etiqueta td -->
+          <td *ngIf="patients.bool_status_user">
+            <p-tag severity="success" value="Activo"></p-tag>
+          </td>
+          <!-- Creamos un ngIf donde si el users.bool_status_user es False muestre esta etiqueta td -->
+          <td *ngIf="!patients.bool_status_user">
+            <p-tag severity="danger" value="Inactivo"></p-tag>
+          </td>
+          <td class="flex flex-wrap gap-1 ">
+            <p-button icon="pi pi-eye" size="small" [outlined]="true"
+              [routerLink]="['/home/pacientes/', patients.id]" />
+            <p-button icon="pi pi-clipboard" size="small" [outlined]="true" />
+            <p-button icon="pi pi-sync" size="small" [outlined]="true" />
+          </td>
 
-          </tr>
+        </tr>
       </ng-template>
-  </p-table>
+    </p-table>
+  </p-card>
+
 </div>
+
+
