CRUD Endpoints UserService

--- a/client/src/app/home/pages/forms-page/forms-page.component.html
+++ b/client/src/app/home/pages/forms-page/forms-page.component.html
@@ -2,7 +2,7 @@
 
   <div class="flex align-items-center justify-content-between">
     <h4>Mis Formularios</h4>
-    <p-button label="Agregar Formulario" icon="pi pi-plus" routerLink="/home/formularios/crear"></p-button>
+    <p-button label="Agregar Formulario" icon="pi pi-plus" routerLink="/home/formularios/crear" size="small" />
   </div>
 
   <p-card class="">
