--- a/client/src/app/home/pages/create-patient-page/create-patient-page.component.html
+++ b/client/src/app/home/pages/create-patient-page/create-patient-page.component.html
@@ -1,12 +1,50 @@
-<div class="grid w-screen">
+<div class="grid w-screen px-3">
 
-  <div class="col-12">
-
-    <h3>Agregar Paciente | Usuario</h3>
-
+  <div class="col-12 flex align-items-center justify-content-between">
+    <h4>Agregar Paciente | Usuario</h4>
+    <p-button label="Regresar" icon="pi pi-arrow-left"  />
   </div>
 
-  <p-card class="col-12">
+  <p-card class="w-full" subheader="Datos Usuario | Paciente">
+
+    <form class="flex flex-wrap" style="border: 1px solid black;">
+
+      <div class="col-12 flex flex-column gap-2 sm:col-6">
+        <label for="name">Nombre</label>
+        <input type="text" pInputText />
+      </div>
+
+      <div class="col-12 flex flex-column gap-2 sm:col-6">
+        <label for="name">Apellido</label>
+        <input type="text" pInputText />
+      </div>
+
+      <div class="col-12 flex flex-column gap-2 sm:col-6">
+        <label for="name">Telefono</label>
+        <p-inputMask mask="999-999-9999" placeholder="999-999-9999" />
+      </div>
+
+      <div class="col-12 flex flex-column gap-2 sm:col-6">
+        <label for="name">Correo</label>
+        <input type="text" pInputText />
+      </div>
+
+      <div class="col-12 flex flex-column gap-2 sm:col-6">
+        <label for="name">Usuario</label>
+        <input type="text" pInputText />
+      </div>
+
+      <div class="col-12 flex flex-column gap-2 sm:col-6">
+        <label for="name">Contraseña</label>
+        <p-password [feedback]="false" [toggleMask]="true"/>
+      </div>
+
+      <div class="col-12 flex flex-row gap-5 align-items-center justify-content-center">
+        <p-button label="Guardar" icon="pi pi-save" />
+        <p-button label="Cancelar" icon="pi pi-times" />
+      </div>
+
+    </form>
 
   </p-card>
 
