--- a/client/src/app/home/pages/patients-page/patients-page.component.html
+++ b/client/src/app/home/pages/patients-page/patients-page.component.html
@@ -2,12 +2,13 @@
 
   <div class="flex align-items-center justify-content-between">
     <h4>Mis Pacientes</h4>
-    <p-button label="Registrar Paciente" icon="pi pi-plus" (click)="showDialog()" size="small" />
+    <p-button label="Registrar Paciente" icon="pi pi-plus" (click)="showDialog('create', 'Registrar Paciente')" size="small" />
   </div>
 
-  <p-dialog header="Registrar Paciente" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw', height: '65vh' }" [draggable]="false"
-    [resizable]="false">
-    <home-create-patient/>
+  <p-dialog [header]="dialogHeader" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw', height: '65vh' }"
+    [draggable]="false" [resizable]="false">
+    <home-create-patient *ngIf="dialogComponent === 'create'" />
+    <home-view-patient *ngIf="dialogComponent === 'view'" />
   </p-dialog>
 
   <p-card class="">
@@ -39,8 +40,7 @@
             <p-tag severity="danger" value="Inactivo"></p-tag>
           </td>
           <td class="flex flex-wrap gap-1 ">
-            <p-button icon="pi pi-eye" size="small" [outlined]="true"
-              [routerLink]="['/home/pacientes/', patients.id]" />
+            <p-button icon="pi pi-eye" size="small" [outlined]="true" (onClick)="sendUserID(patients.id)" (click)="showDialog('view', 'Ver Paciente')"/>
             <p-button icon="pi pi-clipboard" size="small" [outlined]="true" />
             <p-button icon="pi pi-sync" size="small" [outlined]="true" />
           </td>
