--- a/client/src/app/home/components/view-patient/view-patient.component.html
+++ b/client/src/app/home/components/view-patient/view-patient.component.html
@@ -1,4 +1,47 @@
-<p>view-patient works!</p>
-<pre>
-  {{ patient | json }}
-</pre>
+<form [formGroup]="myForm" class="grid"  (ngSubmit)="onSubmit()">
+
+  <div class="col-12 flex align-items-center justify-content-end" >
+
+    <p-button #editButton label="Editar Informacion" icon="pi pi-cog" size="small" (onClick)="editPatient()" [disabled]="editButtonDisabled" />
+
+  </div>
+
+  <div class="col-12 flex flex-column gap-2 sm:col-6">
+    <label for="name">Nombre</label>
+    <input pInputText id="nameUser" aria-describedby="name-help" [value]="patientData?.str_name_user" formControlName="str_name_user" [disabled]="true" />
+  </div>
+
+  <div class="col-12 flex flex-column gap-2 sm:col-6">
+    <label for="name">Apellido</label>
+    <input pInputText id="nameUser" aria-describedby="name-help" [value]="patientData?.str_lastname_user" formControlName="str_lastname_user" [disabled]="true" />
+  </div>
+
+  <div class="col-12 flex flex-column gap-2 sm:col-6">
+    <label for="name">Telefono</label>
+    <input pInputText id="phoneUser" aria-describedby="phone-help" [value]="patientData?.str_phone_user" formControlName="str_phone_user" [disabled]="true" />
+  </div>
+
+  <div class="col-12 flex flex-column gap-2 sm:col-6">
+    <label for="name">Correo</label>
+    <input pInputText id="emailUser" aria-describedby="email-help" [value]="patientData?.str_email_user" formControlName="str_email_user" [disabled]="true" />
+  </div>
+
+  <div class="col-12 flex flex-column gap-2 sm:col-6">
+    <label for="name">Usuario</label>
+    <input pInputText  id="usernameUser" aria-describedby="username-help" [value]="patientData?.str_username_user" formControlName="str_username_user" [disabled]="true" />
+  </div>
+
+  <div class="col-12 flex flex-column gap-2 sm:col-6">
+    <label for="name">Contraseña</label>
+    <input pInputText id="passwordUser" aria-describedby="password-help" [value]="patientData?.str_password_user" formControlName="str_password_user" [disabled]="true" />
+  </div>
+
+  <div class="col-12 flex gap-3 justify-content-end" *ngIf="editInfo">
+    <p-toast></p-toast>
+    <p-confirmDialog></p-confirmDialog>
+
+    <p-button type="submit" label="Guardar" (onClick)="savePatient($event)" icon="pi pi-save" size="small" severity="secondary" />
+    <p-button label="Cancelar" (onClick)="cancelEdit($event)" icon="pi pi-times-circle" size="small" severity="danger" />
+  </div>
+
+</form>
