--- a/client/src/app/home/pages/patients-page/patients-page.component.html
+++ b/client/src/app/home/pages/patients-page/patients-page.component.html
@@ -5,11 +5,11 @@
     <p-button label="Registrar Paciente" icon="pi pi-plus" (click)="showDialog('create', 'Registrar Paciente')" size="small" />
   </div>
 
-  <p-dialog [header]="dialogHeader" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw', height: '65vh' }"
+  <!-- <p-dialog [header]="dialogHeader" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw', height: '65vh' }"
     [draggable]="false" [resizable]="false">
     <home-create-patient *ngIf="dialogComponent === 'create'" />
     <home-view-patient *ngIf="dialogComponent === 'view'" />
-  </p-dialog>
+  </p-dialog> -->
 
   <p-card class="">
     <p-table [value]="patients" [tableStyle]="{ 'min-width': '50rem' }">
@@ -43,8 +43,8 @@
             <p-button icon="pi pi-eye" size="small" [outlined]="true" (onClick)="sendUserID(patients.id)" (click)="showDialog('view', 'Ver Paciente')"/>
             <p-button icon="pi pi-clipboard" size="small" [outlined]="true" />
             <p-button icon="pi pi-sync" size="small" [outlined]="true" (onClick)="changeStatusUser(patients.id)" />
+            <p-button icon="pi pi-trash" size="small" [outlined]="true" (onClick)="deleteUser(patients.id)" />
           </td>
-
         </tr>
       </ng-template>
     </p-table>
