--- a/client/src/app/auth/pages/login-page/login-page.component.html
+++ b/client/src/app/auth/pages/login-page/login-page.component.html
@@ -1,5 +1,4 @@
-<div
-  class="flex md: justify-content-around	align-items-center w-screen h-screen flex-wrap sm: justify-content-center align-items-center">
+<div class="flex md:justify-content-around w-screen h-screen flex-wrap sm: justify-content-center align-items-center">
 
   <div id="title-controller" class="md:w-6">
 
@@ -62,4 +61,3 @@
   </div>
 
 </div>
-
