--- a/client/src/app/auth/pages/reset-page/reset-page.component.html
+++ b/client/src/app/auth/pages/reset-page/reset-page.component.html
@@ -1,5 +1,5 @@
-<div class="flex justify-content-center	align-items-center w-screen h-screen p-3">
-  <div class="card">
+<div class="flex justify-content-center	align-items-center p-8">
+  <div class="card p-4">
     <div class="h-auto">
       <div class="mb-3 text-justify">
         <label for="">
