--- a/client/src/app/home/layout/home-layout/home-layout.component.html
+++ b/client/src/app/home/layout/home-layout/home-layout.component.html
@@ -1,7 +1,7 @@
-<div class="body-controller">
+<div class="w-screen h-screen">
 
   <!-- Header web-->
-  <div id="div" class="flex sm:flex-column md:align-items-center ">
+  <div id="div" class="flex sm:flex-column  align-items-center ">
 
     <div class="container-img mt-2">
       <img class="img-logo" src="../../../../assets/icons/DiabControl_Banner_color_200x50.svg" alt="">
@@ -21,7 +21,7 @@
   </button>
 
   <!-- Main -->
-  <div class="flex flex-wrap">
+  <div id="main" class="w-full">
     <router-outlet></router-outlet>
   </div>
 </div>
