--- a/client/src/app/home/pages/welcome-page/welcome-page.component.html
+++ b/client/src/app/home/pages/welcome-page/welcome-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex align-items-center justify-content-center h-screen w-screen hidden">
+<div class="flex align-items-center justify-content-center h-full">
 
   <img src="../../../../assets/icons/Logo_DiabControlHome.svg" alt="">
 
