--- a/client/src/app/auth/pages/login-page/login-page.component.css
+++ b/client/src/app/auth/pages/login-page/login-page.component.css
@@ -1,3 +1,10 @@
+#body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-y: hidden;
+}
+
 .card{
   width: 500px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
@@ -28,10 +35,12 @@ a:hover{
 
 .diab{
   color: var(--light-cyan-color);
+  font-size: large;
 }
 
 .control{
   color: var(--light-green-color);
+  font-size: large;
 }
 
 @media screen and (max-width: 768px){
