--- a/client/src/app/home/layout/home-layout/home-layout.component.css
+++ b/client/src/app/home/layout/home-layout/home-layout.component.css
@@ -5,6 +5,11 @@
 #div{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   background-color: #FFFFFF;
+  height: 17.5%;
+}
+
+#main{
+  height: 82.5%;
 }
 
 #bottomMenu{
