--- a/client/src/app/home/pages/patients-page/patients-page.component.html
+++ b/client/src/app/home/pages/patients-page/patients-page.component.html
@@ -1,4 +1,4 @@
-<div class="w-screen h-full p-3">
+<div class="flex flex-column w-screen p-3">
   <p-toast></p-toast>
   <p-confirmDialog></p-confirmDialog>
   <div class="flex align-items-center justify-content-between">
