--- a/client/src/app/auth/pages/login-page/login-page.component.html
+++ b/client/src/app/auth/pages/login-page/login-page.component.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="w-full flex justify-content-center">
-          <p-button label="Ingresar"></p-button>
+          <p-button label="Ingresar" (onClick)="Onlogin()"></p-button>
         </div>
       </form>
     </div>
