--- a/client/src/app/home/pages/settings-page/settings-page.component.html
+++ b/client/src/app/home/pages/settings-page/settings-page.component.html
@@ -2,7 +2,7 @@
 
   <div class="flex flex-column mb-3 md:flex-row align-items-center justify-content-between">
     <h4>Mi Cuenta</h4>
-    <p-button class="" label="Cerrar Sesión" icon="pi pi-sign-out" size="small" />
+    <p-button class="" label="Cerrar Sesión" icon="pi pi-sign-out" size="small" (onClick)="onLogout()" />
   </div>
 
   <div class="flex">
